--- a/ExcelClient/App.config
+++ b/ExcelClient/App.config
@@ -15,7 +15,7 @@
     <add key="Catalog" value="FormBulider" />
     <add key="UserId" value="sa" />
     <add key="Password" value="lu111111" />
-    <add key="Host" value="http://localhost:1402" />
+    <add key="Host" value="http://localhost" />
     <add key="LoginUser" value="qy0001" />
     <add key="LoginPassWord" value="aaaaaa" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
