修改表结构 修改界面主框架显示

--- a/ExcelClient/App.config
+++ b/ExcelClient/App.config
@@ -17,7 +17,7 @@
     <add key="Password" value="lu111111" />
     <add key="Host" value="http://localhost" />
     <add key="LoginUser" value="qy0001" />
-    <add key="LoginPassWord" value="aaaaaa" />
+    <add key="LoginPassWord" value="aaa111" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.data>
