修改cookie问题 文件打开问题 重复打开报错问题

--- a/ExcelAPPWeb/ExcelAPPWeb.csproj
+++ b/ExcelAPPWeb/ExcelAPPWeb.csproj
@@ -105,6 +105,7 @@
     <Content Include="asserts\css\images\png.png" />
     <Content Include="asserts\custom.html" />
     <Content Include="asserts\fonts\fontawesome-webfont.woff2" />
+    <Content Include="asserts\libs\jquery.cookie.js" />
     <Content Include="asserts\libs\laydate\laydate.js" />
     <Content Include="asserts\libs\laydate\laydate.min.js" />
     <Content Include="asserts\libs\laydate\theme\default\font\iconfont.svg" />
