修改多维分析报错问题

--- a/ExcelClient/App.config
+++ b/ExcelClient/App.config
@@ -15,7 +15,7 @@
     <add key="Catalog" value="FormBulider" />
     <add key="UserId" value="sa" />
     <add key="Password" value="lu111111" />
-    <add key="Host" value="http://localhost" />
+    <add key="Host" value="http://10.8.2.107:9001" />
     <add key="LoginUser" value="qy0001" />
     <add key="LoginPassWord" value="aaa111" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
