--- a/ExcelClient/App.config
+++ b/ExcelClient/App.config
@@ -15,9 +15,9 @@
     <add key="Catalog" value="FormBulider" />
     <add key="UserId" value="sa" />
     <add key="Password" value="lu111111" />
-    <add key="Host" value="http://localhost" />
-    <add key="LoginUser" value="qy0001" />
-    <add key="LoginPassWord" value="aaa111" />
+    <add key="Host" value="http://10.8.2.107:9001" />
+    <add key="LoginUser" value="8888" />
+    <add key="LoginPassWord" value="aaaaaa" />
     <add key="LastSetDWBH" value="" />
     <add key="LastSetDWMC" value="" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
