--- a/ExcelClient/ExcelClient.csproj
+++ b/ExcelClient/ExcelClient.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{15C37258-5403-4A3F-96D0-DCF9F9EF1042}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>ExcelClient</RootNamespace>
-    <AssemblyName>ExcelClient</AssemblyName>
+    <AssemblyName>OMS</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -32,6 +32,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>bitbug_favicon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper, Version=1.60.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -359,6 +362,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bitbug_favicon.ico" />
     <Content Include="Images\144.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
