--- a/ExcelClient/App.config
+++ b/ExcelClient/App.config
@@ -18,6 +18,7 @@
     <add key="Host" value="http://10.8.2.107:9001" />
     <add key="LoginUser" value="8888" />
     <add key="LoginPassWord" value="aaaaaa" />
+    <add key="VERSION" value="1.0.0" />
     <add key="LastSetDWBH" value="" />
     <add key="LastSetDWMC" value="" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
